--- a/.github/workflows/manifest-e2e.yml
+++ b/.github/workflows/manifest-e2e.yml
@@ -5,7 +5,7 @@ name: E2E test with manifests
 
 on:
   pull_request:
-    branches: [main]
+    branches: [main, daisyonpush]
     types: [opened, reopened, ready_for_review, synchronize] # added `ready_for_review` since draft is skipped
     paths:
       - "**/kubernetes/manifests/**"
