--- a/ChatQnA/kubernetes/manifests/chaqna-gaudi-ui-server.yaml
+++ b/ChatQnA/kubernetes/manifests/chaqna-gaudi-ui-server.yaml
@@ -5,19 +5,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: chaqna-xeon-backend-server-deploy
+  name: chaqna-gaudi-ui-server-deploy
   namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: chaqna-xeon-backend-server-deploy
+      app: chaqna-gaudi-ui-server-deploy
   template:
     metadata:
       annotations:
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
       labels:
-        app: chaqna-xeon-backend-server-deploy
+        app: chaqna-gaudi-ui-server-deploy
     spec:
       nodeSelector:
         demo: "chatqna"
@@ -27,30 +27,30 @@ spec:
         whenUnsatisfiable: ScheduleAnyway
         labelSelector:
                matchLabels:
-                 app: chaqna-xeon-backend-server-deploy
+                 app: chaqna-gaudi-ui-server-deploy
       hostIPC: true
       containers:
       - envFrom:
         - configMapRef:
             name: qna-config
-        image: opea/chatqna:latest
+        image: opea/chatqna-ui:latest
         imagePullPolicy: IfNotPresent
-        name: chaqna-xeon-backend-server-deploy
+        name: chaqna-gaudi-ui-server-deploy
         args:
         ports:
-        - containerPort: 8888
+        - containerPort: 5173
       serviceAccountName: default
 ---
 kind: Service
 apiVersion: v1
 metadata:
-  name: chaqna-xeon-backend-server-svc
+  name: chaqna-gaudi-ui-server-svc
 spec:
   type: NodePort
   selector:
-    app: chaqna-xeon-backend-server-deploy
+    app: chaqna-gaudi-ui-server-deploy
   ports:
     - name: service
-      port: 8888
-      targetPort: 8888
-      nodePort: 30888
+      port: 5173
+      targetPort: 5173
+      nodePort: 30173
